增加基于esim的信号历史展示
